# sophia

./: CMakeLists.txt  README.md
example/: example_faces_filtration.txt  example_res.txt  example_vertices_filtration.txt
include/: complexstructure.h  hashcomplex.h  heapcolumn.h  listcolumn.h  persistence.h  towerreader.h
src/: hashcomplex.cpp  heapcolumn.cpp  listcolumn.cpp  main.cpp  persistence.cpp  towerreader.cpp
